--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
 
   "content_scripts": [
     {
-      "matches": ["https://*.mredllc.com/*"],
+      "matches": ["https://*.mredllc.com/*ps-report=detail*"],
       "js": ["mls/index.js"],
       "run_at": "document_end"
     }
